forms updated to their respective components

--- a/src/app/components/common/login/login.component.html
+++ b/src/app/components/common/login/login.component.html
@@ -1,1 +1,43 @@
 <p>login works!</p>
+<nav id="navtext" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div>
+      <a class="navbar-brand" href="#"><i class="fab fa-pagelines mr-2"></i>SERVICE 2 GREEN</a>
+    </div>
+</nav>
+  
+  <div class="container-fluid px-0">
+      <div class="row align-items-center content">
+          <div class="col-md-6 order-2 order-md-1">
+              <img src="https://i.pinimg.com/originals/96/42/1a/96421a97b83034f52c410befe7cefa20.jpg" alt="" class="img-fluid">
+          </div>
+          <div class="col-md-6 order-1 order-md-2 card-body bg-light mx-auto" style="max-width: 400px;">
+              <h1 class="display-4 text-center">Login</h1>
+              <hr>
+              <form>
+                  <div class="form-group input-group">                
+                      <div class="input-group-prepend">
+                         <label class="mr-3">Username</label>
+                         <span class="input-group-text"><i class="fa fa-user"></i></span>
+                      </div>
+                      <input class="form-control" placeholder="Full name" type="text" required="">
+                  </div>                    
+                  
+                  <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                          <label class="mr-3">Password</label>
+                          <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                      </div>
+                      <input class="form-control" placeholder="password" type="password" required=""> 
+                  </div>
+                 
+                  <div class="form-group">
+                      <button type="submit" class="btn btn-primary btn-block">Login</button>
+                  </div>    
+                  <p class="text-center">Forgot Password? <a href="">Click here</a> </p>           
+                  <p class="text-center">Not a Member? <a href="">Register here</a></p>
+              </form>
+
+          </div> 
+      </div>
+          
+    </div>
