--- a/src/app/components/sponsorer/sponreg/sponreg.component.html
+++ b/src/app/components/sponsorer/sponreg/sponreg.component.html
@@ -1,1 +1,73 @@
 <p>sponreg works!</p>
+<nav id="navtext" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div>
+       <a class="navbar-brand" href="#"><i class="fab fa-pagelines mr-2"></i>SERVICE 2 GREEN</a>
+    </div>
+ </nav>
+ <div class="container">
+     <div class="jumbotron">
+         <h1 class="display-4 text-center text-primary"><i class="fa fa-coins mr-2"></i>Sponsorer Registration</h1>                
+     </div>
+     <div class="row mx-0">
+         <div class="col-md-4 order-2 order-md-1 bg-primary py-5 text-center">
+             <div class="card-body">
+                 <img src="http://www.ansonika.com/mavia/img/registration_bg.svg" style="width:30%">
+                 <h2 class="">Registration</h2>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit sunt voluptas earum repellat eligendi hic voluptatem numquam perferendis pariatur modi iusto autem, expedita,</p>
+             </div>
+         </div>
+         <div class="col-md-8 order-1 order-md-2">
+             <div class="card-body bg-light mx-auto" style="max-width: 400px;">
+                 
+                 <form>
+                     <div class="form-group input-group">                
+                         <div class="input-group-prepend">
+                            <label class="mr-3">Username</label>
+                            <span class="input-group-text"><i class="fa fa-user"></i></span>
+                         </div>
+                         <input class="form-control" placeholder="Full name" type="text">
+                     </div>
+ 
+                     <div class="form-group input-group">                
+                         <div class="input-group-prepend">
+                             <label class="mr-2">First Name</label>
+                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                         </div>
+                         <input name="" class="form-control" placeholder="First name" type="text">
+                     </div>
+ 
+                     <div class="form-group input-group">                
+                         <div class="input-group-prepend">
+                             <label class="mr-2">Last Name</label>
+                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                         </div>
+                         <input name="" class="form-control" placeholder="Last name" type="text">
+                     </div>        
+                             
+                     <div class="form-group input-group">
+                         <div class="input-group-prepend">
+                             <label class="mr-3">Password</label>
+                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                         </div>
+                         <input class="form-control" placeholder="Create password" type="password">
+                     </div>
+
+                     <div class="form-group input-group">
+                         <div class="input-group-prepend">
+                             <label class="mr-3" style="max-width: 68px;">Confirm Password</label>
+                             <span class="input-group-text" style="max-height: 38px;"> <i class="fa fa-lock"></i> </span>
+                         </div>
+                         <input class="form-control" placeholder="Re-enter password" type="password">
+                     </div>
+                    
+                     <div class="form-group">
+                         <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                     </div>    
+                     <p class="text-center">Already Registered? <a href="file:///D:/html/Bootstrap4/S2G/login.html">Log In</a> </p>           
+             
+                 </form>
+ 
+             </div> 
+         </div>
+     </div>
+ </div>
