--- a/src/app/components/volunteer/volreg/volreg.component.html
+++ b/src/app/components/volunteer/volreg/volreg.component.html
@@ -1,1 +1,65 @@
 <p>volreg works!</p>
+<nav id="navtext" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div>
+      <a class="navbar-brand" href="#"><i class="fab fa-pagelines mr-2"></i>SERVICE 2 GREEN</a>
+    </div>
+</nav>
+
+<div class="container-fluid px=0">
+    <div class="card mx-auto">
+        <img src="https://365psd.com/images/previews/f80/green-natural-background-vector-illustration-59110.jpg" class="card-img" alt="Card image">
+        <div class="card-img-overlay">                
+            <div class="card-body bg-light mx-auto" style="max-width: 400px;">
+                <h1 class="display-4 text-center">Volunteer Registration</h1>
+                <hr>
+                <form>
+                    <div class="form-group input-group">                
+                        <div class="input-group-prepend">
+                           <label class="mr-3">Username</label>
+                           <span class="input-group-text"><i class="fa fa-user"></i></span>
+                        </div>
+                        <input class="form-control" placeholder="Full name" type="text">
+                    </div>
+
+                    <div class="form-group input-group">                
+                        <div class="input-group-prepend">
+                            <label class="mr-2">First Name</label>
+                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                        </div>
+                        <input name="" class="form-control" placeholder="First name" type="text">
+                    </div>
+
+                    <div class="form-group input-group">                
+                        <div class="input-group-prepend">
+                            <label class="mr-2">Last Name</label>
+                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                        </div>
+                        <input name="" class="form-control" placeholder="Last name" type="text">
+                    </div>
+                    
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <label class="mr-3">Password</label>
+                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input class="form-control" placeholder="Create password" type="password">
+                    </div>
+
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <label class="mr-3" style="max-width: 68px;">Confirm Password</label>
+                            <span class="input-group-text" style="max-height: 38px;"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input class="form-control" placeholder="Re-enter password" type="password">
+                    </div>
+               
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                    </div>    
+                    <p class="text-center">Already Registered? <a href="file:///D:/html/Bootstrap4/S2G/login.html">Log In</a> </p>           
+        
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
