--- a/src/app/components/organizer/orgreg/orgreg.component.html
+++ b/src/app/components/organizer/orgreg/orgreg.component.html
@@ -1,1 +1,71 @@
 <p>orgreg works!</p>
+<nav id="navtext" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div>
+      <a class="navbar-brand" href="#"><i class="fab fa-pagelines mr-2"></i>SERVICE 2 GREEN</a>
+    </div>
+</nav>
+
+<div class="container-fluid px=0">
+    <div class="card">
+        <div class="row no-gutters">
+            <div class="col-md-6">
+              <img src="https://cdn.statically.io/img/wallpaperaccess.com/full/968120.jpg" class="card-img h-100" alt="Card Image">
+            </div>
+            <div class="col-md-6">
+                <div class="card-body bg-light mx-auto" style="max-width: 400px;">
+                    <h1 class="display-4 text-center">Organiser Registration</h1>
+                    <hr>
+                    <form>
+                        <div class="form-group input-group">                
+                            <div class="input-group-prepend">
+                               <label class="mr-3">Username</label>
+                               <span class="input-group-text"><i class="fa fa-user"></i></span>
+                            </div>
+                            <input class="form-control" placeholder="Full name" type="text">
+                        </div>
+    
+                        <div class="form-group input-group">                
+                            <div class="input-group-prepend">
+                                <label class="mr-2">First Name</label>
+                                <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                            </div>
+                            <input name="" class="form-control" placeholder="First name" type="text">
+                        </div>
+    
+                        <div class="form-group input-group">                
+                            <div class="input-group-prepend">
+                                <label class="mr-2">Last Name</label>
+                                <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                            </div>
+                            <input name="" class="form-control" placeholder="Last name" type="text">
+                        </div>
+                                
+                        <div class="form-group input-group">
+                            <div class="input-group-prepend">
+                                <label class="mr-3">Password</label>
+                                <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                            </div>
+                            <input class="form-control" placeholder="Create password" type="password">
+                        </div>
+
+                        <div class="form-group input-group">
+                            <div class="input-group-prepend">
+                                <label class="mr-3" style="max-width: 68px;">Confirm Password</label>
+                                <span class="input-group-text" style="max-height: 38px;"> <i class="fa fa-lock"></i> </span>
+                            </div>
+                            <input class="form-control" placeholder="Re-enter password" type="password">
+                        </div>
+                       
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                        </div>    
+                        <p class="text-center">Already Registered? <a href="">Log In</a> </p>           
+                
+                    </form>
+    
+                </div> 
+            </div>
+        </div>            
+                    
+    </div>
+</div>
